fixing dark mode

--- a/style.css
+++ b/style.css
@@ -211,7 +211,10 @@ body.dark-mode {
 body.dark-mode .skills-container {
   background: #1e1e1e; /* Dark background for the grid */
 }
+body.dark-mode  .project-card {
+  background-color: #1e1e1e;
 
+}
 body.dark-mode .skill-card {
   background-color: rgba(255, 255, 255, 0.1); /* Dark transparent background for cards */
   color: #fff;
